[gd_scene load_steps=4 format=2]

[ext_resource path="res://Art/GameOver.png" type="Texture" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( -1.29236, -1.29236 )
scale = Vector2( 1.00214, 1.00138 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="HallPanel" type="Panel" parent="."]
visible = false
margin_left = 140.0
margin_top = 150.0
margin_right = 480.0
margin_bottom = 570.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="HallPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -169.37
margin_top = 5.41174
margin_right = -56.3698
margin_bottom = 21.4117
rect_scale = Vector2( 3, 3 )
text = "The Hall of Glory"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NameLabel" type="RichTextLabel" parent="HallPanel"]
margin_left = 6.0
margin_top = 54.0
margin_right = 75.0
margin_bottom = 234.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="ScoreLabel" type="RichTextLabel" parent="HallPanel"]
margin_left = 144.0
margin_top = 54.0
margin_right = 239.0
margin_bottom = 237.0
rect_scale = Vector2( 2, 2 )
bbcode_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="BackButton" type="Button" parent="HallPanel"]
margin_left = 95.0
margin_top = 432.325
margin_right = 145.0
margin_bottom = 452.325
rect_scale = Vector2( 3, 3 )
text = "Back"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NameInput" type="Panel" parent="."]
visible = false
margin_left = 140.0
margin_top = 100.0
margin_right = 480.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="NameInput"]
margin_right = 124.0
margin_bottom = 20.0
rect_scale = Vector2( 2, 2 )
text = "Enter your name"
__meta__ = {
"_edit_lock_": true
}

[node name="SaveButton" type="Button" parent="NameInput"]
margin_left = 257.84
margin_top = 0.263901
margin_right = 298.84
margin_bottom = 20.2639
rect_scale = Vector2( 2, 2 )
text = "Save"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CongratulationPanel" type="Panel" parent="NameInput"]
margin_top = -50.0
margin_right = 340.0
margin_bottom = -10.0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="NameInput/CongratulationPanel"]
margin_right = 170.0
margin_bottom = 20.0
rect_scale = Vector2( 2, 2 )
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="MainMenu" type="Container" parent="."]
visible = false
margin_right = 620.0
margin_bottom = 720.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TheHallOfGloryButton" type="Button" parent="MainMenu"]
margin_left = 130.0
margin_top = 330.0
margin_right = 251.0
margin_bottom = 350.0
rect_scale = Vector2( 3, 3 )
text = "The Hall Of Glory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="MainMenu"]
anchor_right = 1.0
margin_left = 130.0
margin_top = 230.0
margin_right = -370.0
margin_bottom = 250.0
grow_horizontal = 2
rect_scale = Vector2( 3, 3 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="MainMenu"]
margin_left = 260.0
margin_top = 430.0
margin_right = 300.0
margin_bottom = 450.0
rect_scale = Vector2( 3, 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HallPanel/BackButton" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="NameInput/TextEdit" to="." method="_on_TextEdit_mouse_entered"]
[connection signal="pressed" from="NameInput/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="MainMenu/TheHallOfGloryButton" to="." method="_on_TheHallOfGlory_pressed"]
[connection signal="pressed" from="MainMenu/NewGameButton" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MainMenu/QuitButton" to="." method="_on_Quit_pressed"]
